<resources>
    <string name="facebook_app_id" translatable="false">465622173976561</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb465622173976561</string>

    <string name="app_name">Questfy-TW</string>
    <string name="or">or</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="just_passing_by">Just Passing by</string>
    <string name="creat_account">Creat an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="id">ID</string>
    <string name="country">Country</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="real_name">Real Name</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="term_of_service">Term of service</string>
    <string name="register">Register</string>
    <string name="regis_missing">***Oops ! something is missing</string>
    <string name="regis_type_success">Register Success</string>
    <string name="regis_type_failed">Register Unsuccessful</string>
    <string name="regis_type_password_not_equal">"Password is not equal to confirm password"</string>
    <string name="action_drawer_open">drawer open</string>
    <string name="action_drawer_close">drawer close</string>
    <string name="verified">(Verified)</string>
    <string name="not_verified">(Not verified)</string>
    <string name="click_to_check">Click to Check pictures</string>
    <string name="Latest_Article">Latest Article</string>
    <string name="Most_Popular">Most Popular</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="title" translatable="false"></string>
    <string name="content" translatable="false"></string>
    <string name="want_to_meet_up">Want to meet up ?  </string>
    <string name="click_to_replay_an_answer">Click to reply an answer.......</string>
    <string name="title_activity_answer_reply">AnswerReplyActivity</string>
    <string name="birthday">Birthday</string>
    <string name="please_type_in_your_name">Please type in your name</string>
    <string name="please_type_in_your_birthday">Please type in your birthday</string>
    <string name="select_your_university">Select your university</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="information_not_complete">Information not complete</string>
    <string name="click_to_register_your_complete_information">Click to register your complete information</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="type_a_message">Type a message</string>
    <string name="user_profile">User profile</string>
    <string name="friends">Friends</string>
    <string name="sign_out">Sign Out</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="history">History</string>
    <string name="select_a_major_catergory">Select a Major</string>
    <string name="do_you_know">Do you know ?</string>
    <string name="daily_question">Daily Question</string>
    <string name="personal_info">User information</string>
    <string name="copy_right_declare">© 2019 Questfy Co., Ltd All Rights Reserved</string>
    <string name="comments">Comments</string>
    <string name="status_message">Status message</string>
    <string name="speciality">Speciality</string>
    <string name="save">Save</string>
    <string name="ask_me_anything">Ask me anything ?</string>
    <string name="add_friend">Add Friend</string>
    <string name="waiting_friend_accept">Waiting for friend accept (Click to cancel)</string>
    <string name="accept_friend_request">Accept friend request</string>
    <string name="friend_added">Friend added</string>
    <string name="ask">Ask </string>
    <string name="ask_it">Ask it</string>
    <string name="anything"> anything</string>
    <string name="don_t_have_an_account_apply_now">Don\'t have an account ? Apply now</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_to_start_your">Log in to start your</string>
    <string name="favorite_topics_discussion">favorite topics discussion !</string>
    <string name="skip">Skip</string>
    <string name="forget_password">Forget password ?</string>
    <string name="date">Date</string>
    <string name="set_up_time">Set up time</string>
    <string name="meet_up_place">Meet up place</string>
    <string name="meet_up_address">Meet up address</string>
    <string name="place_name">Place Name</string>
    <string name="question_title">Title</string>
    <string name="question_content">Description</string>
    <string name="click_to_select_a_major_related">Click to select a major related</string>
    <string name="request_meet_up">Request meet up</string>
    <string name="cancle_meet_up">Cancle Meet Up</string>
    <string name="attendants">Attendants</string>
    <string name="meet_up_schedule">Meet up schedule</string>
    <string name="user_not_exist">User not exist</string>
    <string name="search_friend">Search friend</string>
    <string name="question_can_not_be_emoty">Question can not be empty</string>
    <string name="keep">Keep</string>
    <string name="followers">Followers</string>
    <string name="answered">Answered</string>
    <string name="posts">Posts</string>
    <string name="report">Report</string>
    <string name="click_to_add_friend">Click to add friend</string>
    <string name="select_3_related_majors">Select related majors</string>
    <string name="post">Post</string>
    <string name="question_preview">Question preview</string>
    <string name="wrong_password_or_account">Wrong password or account : (</string>
    <string name="account_not_exist">Account does not exist : (</string>
    <string name="today">Today </string>
    <string name="yesterday">Yesterday </string>
    <string name="user_info_not_complete">User information not complete</string>
    <string name="complete_user_info_enjoy">Complete your user information to enjoy more function</string>
    <string name="setting">Setting</string>
    <string name="person_ans_question">Private Q&amp;A</string>

    <string name="general">General</string>
    <string name="app_version">appVersion</string>
    <string name="account_information">Account information</string>
    <string name="register_email">Register email</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_info">Click to reset password, we will send an password reset link to your registered email</string>
    <string name="log_out">Log out</string>
    <string name="abount_questfy">About Questfy</string>
    <string name="what_is_questfy">What is Questfy ?</string>
    <string name="questfy_fan_page">Questfy\'s facebook fan page</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="term_of_use">Term of use</string>
    <string name="register_an_account">Register an account</string>
    <string name="reply_an_answer">Reply an answer</string>
    <string name="reply">Reply</string>
    <string name="delete_photo">Delete photo</string>
    <string name="click_to_delete_photo">Click yes to delete this photo</string>
    <string name="report_user">Report user</string>
    <string name="select_a_report_reason">Select a report reason</string>
    <string name="Question_can_only_add_one_image">Question can only add one image</string>
    <string name="Select_your_main_course">Select your main course</string>


    <!-- SharedPreference file key -->
    <string name="appIntro" translatable="false">appIntro</string>
    <string name="keyUserCompleteInfo" translatable="false">userCompleteInfo</string>
    <string name="hello_visitor">Hello visitor</string>
    <string name="log_in_to_enjoy_more_service">Log in to enjoy more service</string>
    <string name="reply_only_allow_one_image">Reply only allow one image</string>


</resources>
