<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRelated.LoginActivity"
    android:background="@color/ＭainOrange">

    <RelativeLayout
        android:id="@+id/relayLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtLoginBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Questfy"
            android:textColor="@color/FullWhite"
            android:textSize="80sp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign in with"
            android:textColor="@color/FullWhite"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_below="@+id/txtLoginBrand"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relayLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relayLogin1"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/ImgFacebook"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:layout_toLeftOf="@+id/txtOr"
            android:layout_toStartOf="@+id/txtOr"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/FullWhite"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/ImgFacebook"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/google_plus"
            android:layout_toRightOf="@+id/txtOr"
            android:layout_toEndOf="@+id/txtOr"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relayLogin2"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            >

            <EditText
                android:id="@+id/editEmailLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="30"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtInputEmail"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editPasswordLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="30"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:background="@drawable/sign_in_rectangle"
            android:layout_below="@+id/txtInputPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/FullWhite"
            android:textAllCaps="false"
            android:elevation="10dp"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:background="@drawable/sign_up_rectangle"
            android:layout_below="@+id/btnSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/FullWhite"
            android:textAllCaps="false"
            />





    </RelativeLayout>



</RelativeLayout>